2012-04-12 Stanislas Rolland  <typo3@sjbr.ca>
	* Fix bug #35910: Messages regarding installation problems are not localized
	* Follow-up to bug #35910: Messages regarding installation problems are not localized
	* Cleanup: Remove unnecessary check for div2007 in tx_srfeuserregister_email
	* Fix bug #35926: Checkbox cannot be unset when preview is used
	* Fix bug #9542 (old bug tracker): Required for checkbox doesn't work
	* Fix bug #8432 (old bug tracker): Required checkbox of extended fe_user table is not required when registering in the FE
	* Add feature #35931: Allow to show terms of usage on page or url
	* Add feature #15100 (old bug tracker): How to include terms of use in registration form
	* Add feature #18009 (old bug tracker): Add module_sys_dmail_newsletter to tx_srfeuserregister_pi1_css_tmpl.html (Thanks to Tobias Schaefer)
	* Fix bug #11529 (old bug tracker): tx_srfeuserregister_control_main::init has wrong PhpDoc comment
	* Follow-up to feature #35883: Always use flexforms

2012-04-11 Stanislas Rolland  <typo3@sjbr.ca>
	* Follow-up 4 to feature #35805: Display message in frontend if required extension is not loaded
	* Add feature #35878: Issue error message if FE login security level is not set to "normal" or to "rsa"
	* Add feature #35881: Add a status report about the installation of the extension (TYPO3 4.6+ only)
	* Fix bug #35882: Corrections to template subpart for "terms acknowledged"
	* Follow-up to feature #35881: Add a status report about the installation of the extension (TYPO3 4.6+ only)
	* Follow-up 5 to feature #35805: Drop requirement for ADOdb Date Library
	* Add feature #35883: Always use flexforms
	* Add feature #35884: Add support for middle name

2012-04-10 Stanislas Rolland  <typo3@sjbr.ca>
	* Follow-up 1 to feature #35805: Require system extension adodb
	* Follow-up 9 to feature #34447: Do not show tx_srfeuserregister_password in HTML source
	* Follow-up to #15174 (old bug tracker): Incorrect test of absence of required value